Refactor: Updated entity relationships, added Lombok annotations, and improved security configuration
- Corrected @ManyToMany and @OneToMany mappings in entity classes
- Added missing Lombok annotations (@Getter, @Setter, @NoArgsConstructor, @AllArgsConstructor)
- Fixed database connection settings
- Ensured proper dependency management for jakarta.persistence and lombok
- Improved security configuration:
  - Added @PreAuthorize annotations to secure endpoints in UniversityController
  - Configured method-level security to restrict access based on roles
  - Enhanced authentication and authorization mechanisms